<resources>
    <string name="app_name">MyEcom</string>
    <string name="checkout">CHECKOUT</string>
    <string name="Items_count">6 items</string>
    <string name="total_amount_of_items_added">₹ 932</string>
    <string name="product">Apple</string>
    <string name="weight">₹ 100/kg</string>
    <string name="quantity">2.5Kg</string>
    <string name="no_of_variants">2 variants</string>
    <string name="current_qty">0</string>
</resources>